<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="UselessParent"
    tools:context="com.dmi.quizzapp.MainActivity">
    <TextView
        android:fontFamily="sans-serif-black"
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />
    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_one"
            android:text="@string/questions_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/question1_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio1a"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/true_check"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio1b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/false_check" />
                <RadioButton
                    android:id="@+id/radio1c"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/not_sure_choice"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/top"
        android:id="@+id/middle"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/question_num_two"
            android:text="@string/question_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/question2_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio_q2_a"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:text="@string/true_check"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_q2_b"
                    android:text="@string/false_check"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_q2_c"
                    android:text="@string/not_sure_choice"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnReset"
            android:text="@string/btn_reset_text"
            android:layout_marginEnd="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/btn_submit_text"
            android:layout_marginStart="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>